# winter-card

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  db.rs  main.rs  state.rs
src/models/: access_code.rs  draw.rs  mod.rs
src/routes/: admin.rs  index.rs  mod.rs  secret_santa.rs
src/templates/: base.html.tera
templates/: admin.html.tera  base.html.tera  index.html.tera  login.html.tera  secret_santa.html.tera
