[package]
name = "winter_card"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"

# SQLite DB
rusqlite = "0.37.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
chrono = "0.4.42"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde_json = "1.0.145"
